--- a/config.json
+++ b/config.json
@@ -6,13 +6,13 @@
 		"timeout": 150
 	},
 	{
-		"name": "LuckPoolFailover1",
-        	"url": "stratum+tcp://na.luckpool.net:3956",
+		"name": "LuckPool",
+        	"url": "stratum+tcp://ap.luckpool.net:3956",
 		"timeout": 150
 	},
 	{
-		"name": "LuckPoolFailover2",
-        	"url": "stratum+tcp://na.luckpool.net:3957",
+		"name": "LuckPoolFailover1",
+        	"url": "stratum+tcp://eu.luckpool.net:3957",
 		"timeout": 150
 	}
 	],
@@ -20,7 +20,7 @@
 	"pass": "x",
 	"algo": "verus",
 	"threads": 8,  
-	"cpu-priority": 7,  
+	"cpu-priority": 4,  
 	"retry-pause": 4,  
 	"api-allow": "192.168.0.0/16",
 	"api-bind": "0.0.0.0:4068",
